--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -138,19 +138,19 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">Inception</th>
-                        <td>Christopher Nolan</td>
-                        <td>2010</td>
+                        <th scope="row">Star Wars: Episode IV - A New Hope</th>
+                        <td>George Lucas</td>
+                        <td>1977</td>
                     </tr>
                     <tr>
-                        <th scope="row">Interstellar</th>
-                        <td>Christopher Nolan</td>
-                        <td>2014</td>
+                        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
+                        <td>Irvin Kershner</td>
+                        <td>1980</td>
                     </tr>
                     <tr>
-                        <th scope="row">The Dark Knight</th>
-                        <td>Christopher Nolan</td>
-                        <td>2008</td>
+                        <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
+                        <td>Richard Marquand</td>
+                        <td>1983</td>
                     </tr>
                 </tbody>
             </table>
