--- a/html_advanced/39-styleguide.html
+++ b/html_advanced/39-styleguide.html
@@ -198,7 +198,7 @@
             </header>
             <div>
                 <audio controls>
-                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" type="audio/mp3">
+                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" type="audio/mpeg">
                     Sorry, your browser doesn't support audio element
                 </audio>
             </div>
