--- a/html_advanced/39-styleguide.html
+++ b/html_advanced/39-styleguide.html
@@ -199,7 +199,7 @@
             <div>
                 <audio controls>
                     <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" type="audio/mpeg">
-                    Sorry, your browser doesn't support audio element
+                    <p>Sorry, your browser doesn't support audio element</p>
                 </audio>
             </div>
          </section>
