--- a/html_advanced/39-styleguide.html
+++ b/html_advanced/39-styleguide.html
@@ -197,9 +197,8 @@
                 <h2>Audio</h2>
             </header>
             <div>
-                <audio controls>
-                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" type="audio/mpeg">
-                    <p>Sorry, your browser doesn't support audio element</p>
+                <audio controls src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3">
+                    Sorry, your browser doesn't support audio element
                 </audio>
             </div>
          </section>
