--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -131,6 +131,7 @@
                 <h2>Table</h2>
             </header>
             <table>
+                <caption>Star Wars Trilogy Data</caption>
                 <thead>
                     <th scope="col">Title</th>
                     <th scope="col">Director</th>
