--- a/html_advanced/38-styleguide.html
+++ b/html_advanced/38-styleguide.html
@@ -131,6 +131,7 @@
                 <h2>Table</h2>
             </header>
             <table>
+                <caption>Star Wars Trilogy Data</caption>
                 <thead>
                     <th scope="col">Title</th>
                     <th scope="col">Director</th>
@@ -183,9 +184,8 @@
                 <h2>Video</h2>
             </header>
             <div>
-                <video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
-                    <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4">
-                    <p>Sorry, your browser doesn't support HTML5 video</p>
+                <video controls poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg" loop src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4">
+                    Sorry, your browser doesn't support HTML5 video
                 </video>
             </div>
         </section>
